--- a/BLOCK_3/airflow/docker-compose.yaml
+++ b/BLOCK_3/airflow/docker-compose.yaml
@@ -43,7 +43,7 @@ x-airflow-common:
   # In order to add custom dependencies or upgrade provider packages you can use your extended image.
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.3.2}
+  #image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.8.4}
   build: .
   environment:
     &airflow-common-env
@@ -172,7 +172,7 @@ services:
         function ver() {
           printf "%04d%04d%04d%04d" $${1//./ }
         }
-        airflow_version=$$(gosu airflow airflow version)
+        airflow_version=2.8.4
         airflow_version_comparable=$$(ver $${airflow_version})
         min_airflow_version=2.2.0
         min_airflow_version_comparable=$$(ver $${min_airflow_version})
